--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,6 +8,7 @@ pipeline{
        stage("build image"){
         steps{
             sh "docker build -t static_app:latest ."
+            sh "docker tag static_app:latest jesusgeo/static_app:latest"
             sh "docker push jesusgeo/static_app:latest"
             sh "docker rmi static_app"
         }
