--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,10 +7,16 @@ pipeline{
 
        stage("build image"){
         steps{
+            script{
+                withDockerRegistry(credentialsId: 'docker_ID') {
+                    
             sh "docker build -t app:latest ."
-            sh "docker tag app:latest jesusgeo/app:latest"
-            sh "docker push jesusgeo/app:latest"
-            sh "docker rmi app"
+            sh "docker tag static_app:latest jesusgeo/static_app:latest"
+            sh "docker push jesusgeo/static_app:latest"
+            sh "docker rmi static_app"
+                }
+            }
+        
         }
        }
     }
