--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,9 +10,9 @@ pipeline{
             script{
                 withDockerRegistry(credentialsId: 'docker_ID') {
                     
-            sh "docker build -t app:latest ."
-            sh "docker tag static_app:latest jesusgeo/static_app:latest"
-            sh "docker push jesusgeo/static_app:latest"
+            sh "docker build -t jesusgeo/static_app:${BUILD_ID} ."
+            // sh "docker tag static_app:latest jesusgeo/static_app:latest"
+            sh "docker push jesusgeo/static_app:${BUILD_ID}"
             sh "docker rmi static_app"
                 }
             }
