--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,10 +10,10 @@ pipeline{
             script{
                 withDockerRegistry(credentialsId: 'docker_ID') {
                     
-            sh "docker build -t jesusgeo/static_app:${BUILD_ID} ."
+            sh "docker build -t jesusgeo/static_app:${BUILD_ID}.0.0 ."
             // sh "docker tag static_app:latest jesusgeo/static_app:latest"
-            sh "docker push jesusgeo/static_app:${BUILD_ID}"
-            sh "docker rmi static_app"
+            sh "docker push jesusgeo/static_app:${BUILD_ID}.0.0"
+            sh "docker rmi static_app:${BUILD_ID}.0.0"
                 }
             }
         
