add docker plugin

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,9 +1,21 @@
 pipeline{
     agent any
     stages{
+
+        // stage("Fetch code"){
+
+        // }
         stage("Build & push"){
             steps{
-                sh "docker build -t app:1.0.0 ."
+                script{
+                    // This step should not normally be used in your script. Consult the inline help for details.
+                        withDockerRegistry(credentialsId: 'dockerhub_id') {
+                            sh "docker build -t myapp:1.0.0 ."
+                            sh "docker tag myapp:1.0.0 jesusgeo/myapp:1.0.0"
+                            sh "docker push jesusgeo/myapp:1.0.0"
+                        }
+                }
+                
             }
            
         }
