--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,7 +31,7 @@ pipeline{
         }
 
     environment{
-        DOF = "papa"
+        KEITA = "papa see"
     }
     stages{
     
@@ -77,7 +77,7 @@ pipeline{
 
         stage("ddddd"){
             steps{
-                echo "${DOF}"
+                echo "${KEITA}"
             }
         }
      }
