--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,86 +1,29 @@
-// pipeline{
-//     agent any
-//     stages{
-
-//         // stage("Fetch code"){
-
-//         // }
-//         stage("Build & push"){
-//             steps{
-//                 script{
-//                     // This step should not normally be used in your script. Consult the inline help for details.
-//                         withDockerRegistry(credentialsId: 'dockerhub_id') {
-//                             sh "docker build -t myapp:1.0.0 ."
-//                             sh "docker tag myapp:1.0.0 jesusgeo/myapp:1.0.0"
-//                             sh "docker push jesusgeo/myapp:1.0.0"
-//                         }
-//                 }
-                
-//             }
-           
-//         }
-//     }
-    
-// }
-
-
 pipeline{
     agent any
-    // dynamic variable
         parameters {
             string(name: 'IMAGETAG', defaultValue: '1.0.52') // multiple assignments
         }
-  // static variable
-    environment{
-        // hardcode
-        KEITA = "papa see" // 1 assignment
-    }
     stages{
-    
-        stage("build1"){
+
+        // stage("Fetch code"){
+
+        // }
+        stage("Build & push"){
             steps{
                 script{
                     // This step should not normally be used in your script. Consult the inline help for details.
-                      withDockerRegistry(credentialsId: 'dockerhub_id') {
-                       sh "docker build -t app:${params.IMAGETAG} ."
-                       sh "docker tag app:${params.IMAGETAG} jesusgeo/app:${params.IMAGETAG}"
-                       sh "docker push jesusgeo/app:${params.IMAGETAG}"
-                       //sh 'docker rmi app:1.0.3'//
+                        withDockerRegistry(credentialsId: 'dockerhub_id') {
+                            sh "docker build -t myapp:${params.IMAGETAG} ."
+                            sh "docker tag myapp:${params.IMAGETAG} jesusgeo/myapp:${params.IMAGETAG}"
+                            sh "docker push jesusgeo/myapp:${params.IMAGETAG}"
+                        }
                 }
-             }
+                
             }
+           
         }
-        // stage("build2"){
-        //     steps{
-        //         script{
-        //             // This step should not normally be used in your script. Consult the inline help for details.
-        //               withDockerRegistry(credentialsId: 'dockerhub_id') {
-        //                sh "docker build -t app:${params.MAGETAG} ."
-        //                sh "docker tag app:${params.IMAGETAG} jesusgeo/app:${params.IMAGETAG}"
-        //                sh "docker push jesusgeo/app:${params.IMAGETAG}"
-        //                //sh 'docker rmi app:1.0.3'//
-        //         }
-        //      }
-        //     }
-        // }
-        // stage("build3"){
-        //     steps{
-        //         script{
-        //             // This step should not normally be used in your script. Consult the inline help for details.
-        //               withDockerRegistry(credentialsId: 'dockerhub_id') {
-        //                sh "docker build -t app:${params.MAGETAG} ."
-        //                sh "docker tag app:${params.IMAGETAG} jesusgeo/app:${params.IMAGETAG}"
-        //                sh "docker push jesusgeo/app:${params.IMAGETAG}"
-        //                //sh 'docker rmi app:1.0.3'//
-        //         }
-        //      }
-        //     }
-        // }
-
-        stage("ddddd"){
-            steps{
-                echo "${KEITA}"
-            }
-        }
-     }
+    }
+    
 }
+
+
