--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,7 +26,7 @@ pipeline{
             steps{
                 script{
                     
-                    withDockerRegistry(credentialsId: 'ecr:us-east-1:awscreds', url: '389035013580.dkr.ecr.us-east-1.amazonaws.com/') {
+                    withDockerRegistry(credentialsId: 'ecr:us-east-1:awscreds', url: 'https://389035013580.dkr.ecr.us-east-1.amazonaws.com/') {
                         // sh "docker build -t myapp:${params.IMAGETAG} ."
                         // sh "docker tag myapp:${params.IMAGETAG} jesusgeo/myapp:${params.IMAGETAG}"
                         // sh "docker push jesusgeo/myapp:${params.IMAGETAG}"
