--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,7 +23,7 @@ pipeline{
             }
            
         }
-        
+
         stage("Build & push to ECR"){
             steps{
                 script{
@@ -41,6 +41,14 @@ pipeline{
 
             }
 
+        }
+        stage("Deploy to ECS"){
+            steps{
+                withAWS(credentials: 'ecr:us-east-1:awscreds', region: 'us-east-1') {
+                    // some block
+                    echo "====++++executing Deploy to ECS++++===="
+                }
+            }
         }
 
     }
