--- a/jenkinsfile
+++ b/jenkinsfile
@@ -47,6 +47,7 @@ pipeline{
                 withAWS(credentials: 'ecr:us-east-1:awscreds', region: 'us-east-1') {
                     // some block
                     echo "====++++executing Deploy to ECS++++===="
+                    sh "aws ecs update-service --cluster Devopscluster --service  static-appService     --force-new-deployment"
                 }
             }
         }
