--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,6 +25,17 @@ pipeline{
            
         }
 
+        stage("Build & push to ECR"){
+            steps{
+                script{
+                    // This step should not normally be used in your script. Consult the inline help for details.
+                        withDockerRegistry(credentialsId: 'ecr:us-east-1:fasionapp_id', url: 'https://389035013580.dkr.ecr.us-east-1.amazonaws.com/') {
+                            echo '"######################""""""   i am connected """""""###################'
+                        }
+                }
+            }
+        }
+
     }
     
 }
